
	* src/mframe.m (method_types_get_next_argument): Do weird argframe
 	workaround not just on m68k, but on all NeXT systems.  (Reported
 	by Richard Frith-Macdonald <richard@brainstorm.co.uk>.)

	* src/RunLoop.m ([RunLoop -acceptInputForMode:beforeDate:]): Fix
 	assignment of TIMEOUT.TV_USEC.  (Reported by Richard
 	Frith-Macdonald <richard@brainstorm.co.uk>.)

Wed Oct 16 10:01:23 1996  Scott Christley  <scottc@net-community.com>

	* checks/nsdate.m: New file.
	* src/NSCalendarDate.m: New file.
	* checks/Makefile.in: Add test program for NSDate classes.
	* src/Makefile.in (GNUSTEP_MFILES: Add NSCalendarDate.m.
	* src/NSDate.m: Eliminate use of NSConcreteDate.  Utilize the
	NSCalendarDate class for implementing some methods.
	* src/include/NSDate.h: Add NSCalendarDate interface.

Tue Oct  1 12:56:09 1996  Nicholas Christopher  <nwc@gun.com>

	* NSString.m: Added initWithContentsOfFile: and
	propertyListFromStringsFileFormat:.
	* stringsfile.l, stringsfile.y: New files.

Fri Oct 25 20:22:37 1996  Andrew McCallum  <mccallum@cs.cmu.edu>

	* src/StdioStream.m (strerror) [!HAS_STRERROR]: New function from
 	Richard Frith-Macdonald <richard@brainstorm.co.uk>.
	* configure.in: Check for strerror().

Fri Sep 27 10:33:07 1996  Adam Fedor  <fedor@pulse.Colorado.edu>

	*  aclocal.m4 (OBJC_CON_AUTOLOAD): New macro. Explicit check for
	constructor loading.
	(OBJC_SYS_AUTOLOAD): Insert '_cv' in cache variable name to get it
	to cache correctly.
	(OBJC_SYS_DYNAMIC_LINKER): Use headers to determine linker. Check
	for libraries separately.
	(OBJC_SYS_DYNAMIC_FLAGS): Check to see if '-shared' load flag
	works (for DEC Alpha).

Thu Sep 26 12:39:18 1996  Adam Fedor  <fedor@pulse.Colorado.edu>

	*  src/ostream.m (ostream_close_memory): Change to
	OSTREAM_SAVEBUFFER constant.

Wed Sep 25 18:32:14 1996  Scott Christley  <scottc@net-community.com>

	* src/include/config-win32.sed: Delete file.
 	* src/include/config-win32.h: Changes for new config.h.in.